error handlers added

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,9 @@
-
+<!DOCTYPE html>
 <html lang="fr">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
         <meta charset="UTF-8">
-        <title>predictions</title>
+        <title>e-predictions</title>
 
         <!-- Resources -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
