--- a/HTML/HTML/Bulona - Bootstrap Admin Dashboard Template_files/app-style.css
+++ b/HTML/HTML/Bulona - Bootstrap Admin Dashboard Template_files/app-style.css
@@ -207,6 +207,104 @@ body {
   -webkit-animation: pageloader 1.1s infinite linear;
   animation: pageloader 1.1s infinite linear; 
 }
+#cpoint .c-texte {
+    margin-bottom: 2em;
+}
+#ctitle-top h1 {
+    font-size: 2.6em;
+    color: #000091;
+    letter-spacing: 0.625em;
+    line-height: 1.25em;
+    text-align: center;
+}
+
+#ctitle-top h1 span {
+    color: #E1000F;
+    display: block;
+    letter-spacing: 0.3125em;
+    margin-bottom: 0.25em;
+    text-transform: lowercase;
+}
+.cinfo-block {
+    background-color: #FFFFFF;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
+    margin-bottom: 3em;
+    padding: 0 2em 3em;
+}
+.cinfo-block h2 {
+    background-color: #ffffff !important;
+    color: #000091 !important;
+    font-size: 2em;
+    padding: 1em;
+}
+.cinfo-block>.c-header {
+    margin: 0 -2em;
+    border-bottom: 1px solid #f0f0f0;
+}
+
+.cinfo-block h3 {
+    color: #000091;
+    font-size: 1.75em;
+    margin: 1em 0;
+}
+.cinfo-block>.c-header {
+    margin: 0 -2em;
+    border-bottom: 1px solid #f0f0f0;
+}
+.c-intro {
+    border-top: 2px solid rgba(0, 0, 145, 0.2);
+    font-size: 1.125em;
+    margin-top: 2em;
+    padding-top: 2em;
+}
+#cinformations .c-images {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 2em;
+}
+.cinfo-block {
+    background-color: #FFFFFF;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
+    margin-bottom: 3em;
+    padding: 0 2em 3em;
+}
+.cinfo-block h2 {
+    background-color: #ffffff !important;
+    color: #000091 !important;
+    font-size: 2em;
+    padding: 1em;
+}
+#cprotection ul.c-gestes {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 1.25em;
+    justify-content: space-between;
+    margin-bottom: 2em;
+    padding: 0;
+}
+
+#cprotection .c-gestes li {
+    flex: 0 1 45%;
+    display: flex;
+}
+
+#cprotection .c-gestes img {
+    height: 100px;
+    margin-right: 1em;
+    width: 100px;
+}
+
+
+
+
+#cpoint .c-texte p:first-child,
+#cprotection .item-paragraphe-texte .c-enavant {
+    display: block;
+    font-size: 1.25em;
+    line-height: 1.5em;
+    margin-bottom: 1.5em;
+}
 
 #pageloader-overlay .loader, #pageloader-overlay .loader:after {
 
