--- a/templates/errorPage.html
+++ b/templates/errorPage.html
@@ -25,7 +25,7 @@
                     <div class="card text-center  mx-auto">
                         <h5 class="card-header"> {{title}} </h5>
                         <div class="card-body">
-                            <img src="static/{{img}}" width="20%">
+                            <img src=" {{url_for('static', filename=img)}} " width="20%">
                             <p class="card-text">{{text}}</p>
                             <a href="{{url_for('home')}} " class="btn btn-primary">Retourner</a>
                         </div>
