--- a/templates/AboutPage.html
+++ b/templates/AboutPage.html
@@ -281,10 +281,10 @@
           <div class="desc">yassine_atmani@um5.ac.ma</div>
         </div>
         <div class="bottom">
-          <a href="https://linkedin.com">
+          <a target="_blank" href="https://linkedin.com">
             <img alt="" src="static/img/linkedin.png" height="35 px" width="35 px">
           </a>
-          <a href="https://github.com/yassineatm749">
+          <a target="_blank" href="https://github.com/yassineatm749">
             <img alt="" src="static/img/github.png"  height="35 px" width="35 px">
           </a>
         </div>
@@ -307,10 +307,10 @@
           <div class="desc">chadi_laoulaou@um5.ac.ma</div>
         </div>
         <div class="bottom">
-          <a href="https://linkedin.com">
+          <a target="_blank" href="https://linkedin.com">
             <img alt="" src="static/img/linkedin.png"  height="35 px" width="35 px">
           </a>
-          <a href="https://github.com/Chadiii">
+          <a target="_blank" href="https://github.com/Chadiii">
             <img alt="" src="static/img/github.png"  height="35 px" width="35 px">
           </a>
         </div>
@@ -333,10 +333,10 @@
           <div class="desc">sidiyayaarnaud_yarga@um5.ac.ma</div>
         </div>
         <div class="bottom">
-          <a href="https://www.linkedin.com/in/arnaud-yarga-876469174">
+          <a target="_blank" href="https://www.linkedin.com/in/arnaud-yarga-876469174">
             <img alt="" src="static/img/linkedin.png"  height="35 px" width="35 px">
           </a>
-          <a href="https://github.com/ArnaudYarga">
+          <a target="_blank" href="https://github.com/ArnaudYarga">
             <img alt="" src="static/img/github.png"  height="35 px" width="35 px">
           </a>
         </div>
@@ -359,10 +359,10 @@
           <div class="desc">zakarya_zaitar@um5.ac.ma</div>
         </div>
         <div class="bottom">
-          <a href="https://linkedin.com">
+          <a target="_blank" href="https://linkedin.com">
             <img alt="" src="static/img/linkedin.png"  height="35 px" width="35 px">
           </a>
-          <a href="https://github.com/zaitarzakarya">
+          <a target="_blank" href="https://github.com/zaitarzakarya">
             <img alt="" src="static/img/github.png"  height="35 px" width="35 px">
           </a>
         </div>
