--- a/templates/HomePage.html
+++ b/templates/HomePage.html
@@ -14,6 +14,27 @@
               width: 100%;
               height: 250px;
           }
+          .gradient-recovered{
+            background: #00b09b;  /* fallback for old browsers */
+            background: -webkit-linear-gradient(to bottom, #96c93d, #00b09b);  /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to bottom, #96c93d, #00b09b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+          }
+
+          .gradient-cases{
+            background: #3a7bd5;  /* fallback for old browsers */
+            background: -webkit-linear-gradient(to right, #3a6073, #3a7bd5);  /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to right, #3a6073, #3a7bd5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+          }
+          .gradient-active{
+            background: #fc4a1a;  /* fallback for old browsers */
+            background: -webkit-linear-gradient(to right, #f7b733, #fc4a1a);  /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to right, #f7b733, #fc4a1a); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+          }
+          .gradient-deaths{
+            background: #EB3349;  /* fallback for old browsers */
+            background: -webkit-linear-gradient(to right, #F45C43, #EB3349);  /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to right, #F45C43, #EB3349); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+          }
     </style>
     <!--Start Dashboard Content-->
     <script>
@@ -39,6 +60,79 @@
       </header>
     </div>
     <!--End Row-->
+
+
+    <div class="row mt-3">
+      <div class="col-12 col-lg-6 col-xl-6">
+        <div class="card shadow">
+          <div class="card-body">
+             <h5 class="mb-0">Confirmed cases prediction <span class="float-right"></span></h5>
+             <hr style="border: 1px solid black;">
+             <p class="mb-0 small-font">
+              Today: {{resume.prediction1.cumul}} <span class="float-right">+{{resume.prediction1.ajout}} </span><br>
+              Tomorrow: {{resume.prediction2.cumul}}<span class="float-right">+{{resume.prediction2.ajout}} </span><br>
+           </p>
+           </div>
+        </div>
+      </div>
+    </div>
+    <!--End Row-->
+
+
+    <div class="row mt-3">
+      <div class="col-12 col-lg-6 col-xl-3">
+        <div class="card gradient-cases">
+          <div class="card-body">
+            <h5 class="text-white mb-0">{{resume.casesCumul}} <span class="float-right"></span></h5>
+            <hr style="border: 1px solid white;">
+            <p class="mb-0 text-white small-font">
+             Confirmed cases <br>
+             <span class="float-right">+{{resume.casesAjout}} </span>
+             <small class="mb-0">({{resume.date}})</small> 
+          </p>
+          </div>
+        </div> 
+      </div>
+      <div class="col-12 col-lg-6 col-xl-3">
+        <div class="card gradient-recovered">
+          <div class="card-body">
+            <h5 class="text-white mb-0">{{resume.recoveredCumul}} <span class="float-right"></span></h5>
+            <hr style="border: 1px solid white;">
+            <p class="mb-0 text-white small-font">
+             Recovered <br>
+             <span class="float-right">+{{resume.recoveredAjout}} </span>
+             <small class="mb-0">({{resume.date}})</small> 
+          </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-lg-6 col-xl-3">
+        <div class="card gradient-deaths">
+          <div class="card-body">
+            <h5 class="text-white mb-0">{{resume.deathsCumul}} <span class="float-right"></span></h5>
+            <hr style="border: 1px solid white;">
+            <p class="mb-0 text-white small-font">
+             Deaths <br>
+             <span class="float-right">+{{resume.deathsAjout}} </span>
+             <small class="mb-0">({{resume.date}})</small> 
+          </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-lg-6 col-xl-3">
+        <div class="card gradient-active">
+          <div class="card-body">
+            <h5 class="text-white mb-0">{{resume.casesCumul - resume.recoveredCumul- resume.deathsCumul}} <span class="float-right"></span></h5>
+            <hr style="border: 1px solid white;">
+            <p class="mb-0 text-white small-font">
+             Active cases <br>
+             <small class="mb-0">({{resume.date}})</small> 
+          </p>
+          </div>
+        </div>
+      </div>
+    </div><!--End Row-->
+
 
     <div class="row">
       <div class="col-12 col-lg-6 col-xl-4">
