performance criteria added

--- a/templates/AboutPage.html
+++ b/templates/AboutPage.html
@@ -261,6 +261,7 @@
   <h3>About us</h3><br />
   <p>
     We are a team of web and mobile engeneering student at national school of computer science of rabat at Morocco. This website is the result of our semester project.
+    We used a machine learning algorithm called ARIMA to predict the number of confirmed coronavirus cases in Morocco for the next seven days.
   </p>
 </div>
 <div >
