--- a/templates/HomePage.html
+++ b/templates/HomePage.html
@@ -10,7 +10,7 @@
           #evolution,
           #prediction,
           #comparaison,
-          #errors {
+          #errors, #accuracy {
               width: 100%;
               height: 250px;
           }
@@ -36,7 +36,7 @@
             background: linear-gradient(to right, #F45C43, #EB3349); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
           }
     </style>
-    <!--Start Dashboard Content-->
+
     <script>
       window.onload = function () {
           renderPredictionCharts('{{ predictions|tojson|safe }}');
@@ -54,9 +54,7 @@
       <header>
         <h3>COVID-19 prediction<br /></h3>
         <p>This site is produced by Data Scientist students from ENSIAS dedicated to monitoring the results of
-          covid-19 mainly at national level in Morocco as well as predicting the evolution of the pandemic. The
-          predictions are based on maching learning algorithms which make it possible to understand and give
-          predictions of the number of positive cases for a given day.</p>
+          covid-19 mainly at national level in Morocco as well as predicting the evolution of the pandemic. <a href="/about">Read more</a> </p>
       </header>
     </div>
     <!--End Row-->
@@ -182,6 +180,25 @@
                 <h6 class="mb-0">Erreurs</h6>
                 <small class="mb-0">Différence entre les prédictions effectuées et les cas observées.</small>
                 <div id="errors"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-lg-6 col-xl-4">
+        <div class="card">
+          <div class="card-body">
+            <div class="media align-items-center">
+              <div class="media-body ml-3">
+                <h6 class="mb-0">Précision</h6>
+                <small class="mb-0">Quelques critères de performance du modèle.</small>
+                <div id="accuracy"><br><br>
+                  <p class="mb-0 small-font">
+                    {% for d in accuracy %}
+                      {{d.name}} : <span class="float-right"> {{d.value}} </span><br><br>
+                    {% endfor %}
+                  </p>
+                </div>
               </div>
             </div>
           </div>
