--- a/templates/HomePage.html
+++ b/templates/HomePage.html
@@ -1,209 +1,254 @@
 {% extends 'layouts/default.html' %}
 
 {% block head %}
-  <script src="https://www.amcharts.com/lib/4/core.js"></script>
-      <script src="https://www.amcharts.com/lib/4/charts.js"></script>
-      <script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
-      <script src="static/script.js"></script>
-      <!-- Styles -->
-      <style>
-          #evolution,
-          #prediction,
-          #comparaison,
-          #errors, #accuracy {
-              width: 100%;
-              height: 250px;
-          }
-          .gradient-recovered{
-            background: #00b09b;  /* fallback for old browsers */
-            background: -webkit-linear-gradient(to bottom, #96c93d, #00b09b);  /* Chrome 10-25, Safari 5.1-6 */
-            background: linear-gradient(to bottom, #96c93d, #00b09b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-          }
+<script src="https://www.amcharts.com/lib/4/core.js"></script>
+<script src="https://www.amcharts.com/lib/4/charts.js"></script>
+<script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
+<script src="static/script.js"></script>
+<!-- Styles -->
+<style>
+  #evolution,
+  #prediction,
+  #comparaison,
+  #errors,
+  #accuracy {
+    width: 100%;
+    height: 250px;
+  }
 
-          .gradient-cases{
-            background: #3a7bd5;  /* fallback for old browsers */
-            background: -webkit-linear-gradient(to right, #3a6073, #3a7bd5);  /* Chrome 10-25, Safari 5.1-6 */
-            background: linear-gradient(to right, #3a6073, #3a7bd5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-          }
-          .gradient-active{
-            background: #fc4a1a;  /* fallback for old browsers */
-            background: -webkit-linear-gradient(to right, #f7b733, #fc4a1a);  /* Chrome 10-25, Safari 5.1-6 */
-            background: linear-gradient(to right, #f7b733, #fc4a1a); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-          }
-          .gradient-deaths{
-            background: #EB3349;  /* fallback for old browsers */
-            background: -webkit-linear-gradient(to right, #F45C43, #EB3349);  /* Chrome 10-25, Safari 5.1-6 */
-            background: linear-gradient(to right, #F45C43, #EB3349); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-          }
-    </style>
+  .gradient-recovered {
+    background: #00b09b;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to bottom, #96c93d, #00b09b);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to bottom, #96c93d, #00b09b);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  }
 
-    <script>
-      window.onload = function () {
-          renderPredictionCharts('{{ predictions|tojson|safe }}');
-          renderEvolutionCharts('{{ data|tojson|safe }}');
-          renderComparisonCharts('{{ historicalPredictions|tojson|safe }}');
-          renderErrorsCharts('{{ predErrors|tojson|safe }}')
-      }
-    </script>
+  .gradient-cases {
+    background: #3a7bd5;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #3a6073, #3a7bd5);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #3a6073, #3a7bd5);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  }
 
-{% endblock %} 
+  .gradient-active {
+    background: #fc4a1a;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #f7b733, #fc4a1a);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #f7b733, #fc4a1a);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  }
+
+  .gradient-deaths {
+    background: #EB3349;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #F45C43, #EB3349);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #F45C43, #EB3349);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  }
+</style>
+
+<script>
+  window.onload = function () {
+    renderPredictionCharts('{{ predictions|tojson|safe }}');
+    renderEvolutionCharts('{{ data|tojson|safe }}');
+    renderComparisonCharts('{{ historicalPredictions|tojson|safe }}');
+    renderErrorsCharts('{{ predErrors|tojson|safe }}')
+  }
+</script>
+
+{% endblock %}
 
 
 {% block body %}
-    <div class="row mt-3">
-      <header>
-        <h3>COVID-19 prediction<br /></h3>
-        <p>This site is produced by Data Scientist students from ENSIAS dedicated to monitoring the results of
-          covid-19 mainly at national level in Morocco as well as predicting the evolution of the pandemic. <a href="/about">Read more</a> </p>
-      </header>
+<div class="row mt-3">
+  <header>
+    <h3>COVID-19 prediction<br /></h3>
+    <p>This site is produced by Data Scientist students from ENSIAS dedicated to monitoring the results of
+      covid-19 mainly at national level in Morocco as well as predicting the evolution of the pandemic. <a
+        href="/about">Read more</a> </p>
+  </header>
+</div>
+<!--End Row-->
+
+
+<div class="row mt-3">
+  <div class="col-12 col-lg-6 col-xl-6">
+    <div class="card shadow">
+      <div class="card-body">
+        <h5 class="mb-0">Confirmed cases prediction <span class="float-right"></span></h5>
+        <hr style="border: 1px solid black;">
+        <p class="mb-0 small-font">
+          Today: {{resume.prediction1.cumul}} <span class="float-right">+{{resume.prediction1.ajout}} </span><br>
+          Tomorrow: {{resume.prediction2.cumul}}<span class="float-right">+{{resume.prediction2.ajout}} </span><br>
+        </p>
+      </div>
     </div>
-    <!--End Row-->
+  </div>
+</div>
+<!--End Row-->
 
 
-    <div class="row mt-3">
-      <div class="col-12 col-lg-6 col-xl-6">
-        <div class="card shadow">
-          <div class="card-body">
-             <h5 class="mb-0">Confirmed cases prediction <span class="float-right"></span></h5>
-             <hr style="border: 1px solid black;">
-             <p class="mb-0 small-font">
-              Today: {{resume.prediction1.cumul}} <span class="float-right">+{{resume.prediction1.ajout}} </span><br>
-              Tomorrow: {{resume.prediction2.cumul}}<span class="float-right">+{{resume.prediction2.ajout}} </span><br>
-           </p>
-           </div>
-        </div>
+<div class="row mt-3">
+  <div class="col-12 col-lg-6 col-xl-3">
+    <div class="card gradient-cases">
+      <div class="card-body">
+        <h5 class="text-white mb-0">{{resume.casesCumul}} <span class="float-right"></span></h5>
+        <hr style="border: 1px solid white;">
+        <p class="mb-0 text-white small-font">
+          Confirmed cases <br>
+          <span class="float-right">+{{resume.casesAjout}} </span>
+          <small class="mb-0">({{resume.date}})</small>
+        </p>
       </div>
     </div>
-    <!--End Row-->
+  </div>
+  <div class="col-12 col-lg-6 col-xl-3">
+    <div class="card gradient-recovered">
+      <div class="card-body">
+        <h5 class="text-white mb-0">{{resume.recoveredCumul}} <span class="float-right"></span></h5>
+        <hr style="border: 1px solid white;">
+        <p class="mb-0 text-white small-font">
+          Recovered <br>
+          <span class="float-right">+{{resume.recoveredAjout}} </span>
+          <small class="mb-0">({{resume.date}})</small>
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="col-12 col-lg-6 col-xl-3">
+    <div class="card gradient-deaths">
+      <div class="card-body">
+        <h5 class="text-white mb-0">{{resume.deathsCumul}} <span class="float-right"></span></h5>
+        <hr style="border: 1px solid white;">
+        <p class="mb-0 text-white small-font">
+          Deaths <br>
+          <span class="float-right">+{{resume.deathsAjout}} </span>
+          <small class="mb-0">({{resume.date}})</small>
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="col-12 col-lg-6 col-xl-3">
+    <div class="card gradient-active">
+      <div class="card-body">
+        <h5 class="text-white mb-0">{{resume.casesCumul - resume.recoveredCumul- resume.deathsCumul}} <span
+            class="float-right"></span></h5>
+        <hr style="border: 1px solid white;">
+        <p class="mb-0 text-white small-font">
+          Active cases <br>
+          <small class="mb-0">({{resume.date}})</small>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+<!--End Row-->
 
 
-    <div class="row mt-3">
-      <div class="col-12 col-lg-6 col-xl-3">
-        <div class="card gradient-cases">
-          <div class="card-body">
-            <h5 class="text-white mb-0">{{resume.casesCumul}} <span class="float-right"></span></h5>
-            <hr style="border: 1px solid white;">
-            <p class="mb-0 text-white small-font">
-             Confirmed cases <br>
-             <span class="float-right">+{{resume.casesAjout}} </span>
-             <small class="mb-0">({{resume.date}})</small> 
-          </p>
-          </div>
-        </div> 
-      </div>
-      <div class="col-12 col-lg-6 col-xl-3">
-        <div class="card gradient-recovered">
-          <div class="card-body">
-            <h5 class="text-white mb-0">{{resume.recoveredCumul}} <span class="float-right"></span></h5>
-            <hr style="border: 1px solid white;">
-            <p class="mb-0 text-white small-font">
-             Recovered <br>
-             <span class="float-right">+{{resume.recoveredAjout}} </span>
-             <small class="mb-0">({{resume.date}})</small> 
-          </p>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-lg-6 col-xl-3">
-        <div class="card gradient-deaths">
-          <div class="card-body">
-            <h5 class="text-white mb-0">{{resume.deathsCumul}} <span class="float-right"></span></h5>
-            <hr style="border: 1px solid white;">
-            <p class="mb-0 text-white small-font">
-             Deaths <br>
-             <span class="float-right">+{{resume.deathsAjout}} </span>
-             <small class="mb-0">({{resume.date}})</small> 
-          </p>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-lg-6 col-xl-3">
-        <div class="card gradient-active">
-          <div class="card-body">
-            <h5 class="text-white mb-0">{{resume.casesCumul - resume.recoveredCumul- resume.deathsCumul}} <span class="float-right"></span></h5>
-            <hr style="border: 1px solid white;">
-            <p class="mb-0 text-white small-font">
-             Active cases <br>
-             <small class="mb-0">({{resume.date}})</small> 
-          </p>
-          </div>
-        </div>
-      </div>
-    </div><!--End Row-->
-
-
-    <div class="row">
-      <div class="col-12 col-lg-6 col-xl-4">
-        <div class="card">
-          <div class="card-body">
-            <div class="media align-items-center">
-              <div class="media-body ml-3">
-                <h6 class="mb-0">Prédictions</h6>
-                <small class="mb-0">Prédictions des cas confirmés du covid-19 pour les {{predictions|length }} prochains jours.</small>
-                <div id="prediction"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-lg-6 col-xl-4">
-        <div class="card">
-          <div class="card-body">
-            <div class="media align-items-center">
-              <div class="media-body ml-3">
-                <h6 class="mb-0">Évolution</h6>
-                <small class="mb-0">Évolution des cas confimés, des guérisons et des décès liés au covid-19.</small>
-                <div id="evolution"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-lg-6 col-xl-4">
-        <div class="card">
-          <div class="card-body">
-            <div class="media align-items-center">
-              <div class="media-body ml-3">
-                <h6 class="mb-0">Comparaison</h6>
-                <small class="mb-0">Comparaison entre les prédictions effectuées et les cas observés.</small>
-                <div id="comparaison"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-lg-6 col-xl-4">
-        <div class="card">
-          <div class="card-body">
-            <div class="media align-items-center">
-              <div class="media-body ml-3">
-                <h6 class="mb-0">Erreurs</h6>
-                <small class="mb-0">Différence entre les prédictions effectuées et les cas observées.</small>
-                <div id="errors"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-lg-6 col-xl-4">
-        <div class="card">
-          <div class="card-body">
-            <div class="media align-items-center">
-              <div class="media-body ml-3">
-                <h6 class="mb-0">Précision</h6>
-                <small class="mb-0">Quelques critères de performance du modèle.</small>
-                <div id="accuracy"><br><br>
-                  <p class="mb-0 small-font">
-                    {% for d in accuracy %}
-                      {{d.name}} : <span class="float-right"> {{d.value}} </span><br><br>
-                    {% endfor %}
-                  </p>
-                </div>
-              </div>
-            </div>
+<div class="row">
+  <div class="col-12 col-lg-6 col-xl-4">
+    <div class="card">
+      <div class="card-body">
+        <div class="media align-items-center">
+          <div class="media-body ml-3">
+            <h6 class="mb-0">Prédictions</h6>
+            <small class="mb-0">Prédictions des cas confirmés du covid-19 pour les {{predictions|length }} prochains
+              jours.</small>
+            <div id="prediction"></div>
           </div>
         </div>
       </div>
     </div>
-    <!--End Row-->
+  </div>
+  <div class="col-12 col-lg-6 col-xl-4">
+    <div class="card">
+      <div class="card-body">
+        <div class="media align-items-center">
+          <div class="media-body ml-3">
+            <h6 class="mb-0">Évolution</h6>
+            <small class="mb-0">Évolution des cas confimés, des guérisons et des décès liés au covid-19.</small>
+            <div id="evolution"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-12 col-lg-6 col-xl-4">
+    <div class="card">
+      <div class="card-body">
+        <div class="media align-items-center">
+          <div class="media-body ml-3">
+            <h6 class="mb-0">Comparaison</h6>
+            <small class="mb-0">Comparaison entre les prédictions effectuées et les cas observés.</small>
+            <div id="comparaison"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-12 col-lg-6 col-xl-4">
+    <div class="card">
+      <div class="card-body">
+        <div class="media align-items-center">
+          <div class="media-body ml-3">
+            <h6 class="mb-0">Erreurs</h6>
+            <small class="mb-0">Différence entre les prédictions effectuées et les cas observées.</small>
+            <div id="errors"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-12 col-lg-6 col-xl-4">
+    <div class="card">
+      <div class="card-body">
+        <div class="media align-items-center">
+          <div class="media-body ml-3">
+            <h6 class="mb-0">Précision</h6>
+            <small class="mb-0">Quelques critères de performance du modèle.</small>
+            <div id="accuracy"><br><br>
+              <p class="mb-0 small-font">
+                {% for d in accuracy %}
+                {{d.name}} : <span class="float-right"> {{d.value}} </span><br><br>
+                {% endfor %}
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!--End Row-->
+
+<div class="col-12 col-lg-12 col-xl-6">
+  <div class="card">
+    <div class="card-header"><strong> Confirmed Cases by the World</strong></div>
+    <div class="table-responsive">
+      <table class="table table-striped align-items-center">
+        <thead>
+          <tr>
+            <th>Country</th>
+            <th>Confirmed cases</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for item in worldTopCounries %}
+          <tr>
+            <td><i class="flag-icon flag-icon-ca mr-2"></i> {{ item[0] }}</td>
+            <td>{{ item[1] }}</td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
 {% endblock %}
