Finishing About us Page

--- a/templates/AboutPage.html
+++ b/templates/AboutPage.html
@@ -282,7 +282,7 @@
           <div class="desc">yassine_atmani@um5.ac.ma</div>
         </div>
         <div class="bottom">
-          <a target="_blank" href="https://linkedin.com">
+          <a target="_blank" href="https://www.linkedin.com/in/yassine-atmani-246819187/">
             <img alt="" src="static/img/linkedin.png" height="35 px" width="35 px">
           </a>
           <a target="_blank" href="https://github.com/yassineatm749">
@@ -308,7 +308,7 @@
           <div class="desc">chadi_laoulaou@um5.ac.ma</div>
         </div>
         <div class="bottom">
-          <a target="_blank" href="https://linkedin.com">
+          <a target="_blank" href="https://www.linkedin.com/in/chadi-laoulaou/">
             <img alt="" src="static/img/linkedin.png"  height="35 px" width="35 px">
           </a>
           <a target="_blank" href="https://github.com/Chadiii">
@@ -360,7 +360,7 @@
           <div class="desc">zakarya_zaitar@um5.ac.ma</div>
         </div>
         <div class="bottom">
-          <a target="_blank" href="https://linkedin.com">
+          <a target="_blank" href="https://www.linkedin.com/in/zakarya-zaitar-a81a9b1a9/">
             <img alt="" src="static/img/linkedin.png"  height="35 px" width="35 px">
           </a>
           <a target="_blank" href="https://github.com/zaitarzakarya">
