addition of observations to predFile fixed

--- a/templates/layouts/default.html
+++ b/templates/layouts/default.html
@@ -116,7 +116,7 @@
         <!--End footer-->
 
         <!--Start Back To Top Button-->
-        <a href="javaScript:void();" class="back-to-top"> <img src="static/img/up_arrow.png" width="60%"> </a>
+        <a class="back-to-top"> <img src="static/img/up_arrow.png" width="60%"> </a>
         <!--End Back To Top Button-->
 
         <!--End wrapper-->
