--- a/templates/HomePage.html
+++ b/templates/HomePage.html
@@ -236,7 +236,7 @@
 
 <div class="col-12 col-lg-12 col-xl-6">
   <div class="card">
-    <div class="card-header"><strong> Confirmed Cases by the World</strong></div>
+    <div class="card-header"><strong> Confirmed Cases by the World (Top {{worldTopCounries|length }}) </strong></div>
     <div class="table-responsive">
       <table class="table table-striped align-items-center">
         <thead>
